// Original file: proto/notification.proto


export interface CreateNotificationRequest {
  'senderId'?: (string);
  'receiverId'?: (string);
  'scenario'?: (string);
}

export interface CreateNotificationRequest__Output {
  'senderId'?: (string);
  'receiverId'?: (string);
  'scenario'?: (string);
}
