// Original file: proto/notification.proto

import type { NotificationResponse as _notificationPackage_NotificationResponse, NotificationResponse__Output as _notificationPackage_NotificationResponse__Output } from '../notificationPackage/NotificationResponse';

export interface GetNotificationsResponse {
  'notifications'?: (_notificationPackage_NotificationResponse)[];
}

export interface GetNotificationsResponse__Output {
  'notifications'?: (_notificationPackage_NotificationResponse__Output)[];
}
