// Original file: proto/notification.proto


export interface Notification {
  'notificationId'?: (string);
  'senderId'?: (string);
  'receiverId'?: (string);
  'message'?: (string);
  'status'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface Notification__Output {
  'notificationId'?: (string);
  'senderId'?: (string);
  'receiverId'?: (string);
  'message'?: (string);
  'status'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
