// Original file: proto/notification.proto


export interface NotificationResponse {
  'notificationId'?: (string);
  'senderId'?: (string);
  'receiverId'?: (string);
  'message'?: (string);
  'status'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface NotificationResponse__Output {
  'notificationId'?: (string);
  'senderId'?: (string);
  'receiverId'?: (string);
  'message'?: (string);
  'status'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
